Fixed explosion scrollbar problem

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@
    src: url(../fonts/electrolize.ttf);
 }
 body {
-    overflow:auto;
+    overflow:hidden;
     font-family:Electrolize;
     position:relative;
     background:black;
@@ -26,6 +26,30 @@ body::-webkit-scrollbar-thumb
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
   background-color: #555;
+}
+#bodycontainer::-webkit-scrollbar-track
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  border-radius: 10px;
+  background-color: #272B30;
+}
+
+#bodycontainer::-webkit-scrollbar
+{
+  width: 12px;
+  background-color: #272B30;
+}
+
+#bodycontainer::-webkit-scrollbar-thumb
+{
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: #555;
+}
+#bodycontainer{
+height:100%;
+max-height:100%;
+min-height:100%;
 }
 html *{
 font-family:Electrolize;
